--- a/.gitignore
+++ b/.gitignore
@@ -1,12 +1,6 @@
-.DS_Store
-node_modules/
-dist/
-npm-debug.log
-yarn-error.log
-
-# Editor directories and files
-.idea
-*.suo
-*.ntvs*
-*.njsproj
-*.sln
+# package directories
+node_modules
+jspm_packages
+backend
+# Serverless directories
+.serverless
